# fintrapay-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: test_client.py
xfintrapay/: __init__.py  client.py  models.py  webhooks.py
