[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintrapay"
version = "0.1.0"
description = "Python SDK for FintraPay crypto payment gateway"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "FintraPay", email = "support@fintrapay.io"}]
keywords = ["crypto", "payments", "stablecoin", "USDT", "USDC", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://fintrapay.io"
Documentation = "https://fintrapay.io/docs.html"
Repository = "https://github.com/Fintra-Ltd/fintrapay-python"

[tool.setuptools.packages.find]
include = ["xfintrapay*"]
